<resources>
    <string name="app_name">kotlin5</string>
    <string name="edit">Edit</string>
    <string name="enter_title">Enter Title</string>
    <string name="enter_description">Enter Description</string>
    <string name="enter_genre">Enter Genre</string>
    <string name="enter_year">Enter Year</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
</resources>