<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp"/>

    <EditText
        android:id="@+id/editDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_description"
        app:layout_constraintTop_toBottomOf="@id/editTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp"/>

    <EditText
        android:id="@+id/editGenre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_genre"
        app:layout_constraintTop_toBottomOf="@id/editDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp"/>

    <EditText
        android:id="@+id/editYear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_year"
        app:layout_constraintTop_toBottomOf="@id/editGenre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp"/>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
